# Genetic-neural-network-for-simple-control

./: .gitignore  LICENSE  Makefile  README.md  main.c  myprogram  test.c  testprogram
TEST/: test_activation_fnc.c  test_full_run.c  test_genetic_operations.c  test_main.c  test_matrixes.c  test_model_system.c  test_neural_network.c  test_pid_controller.c  test_population.c  test_signal_designer.c  test_sort.c  test_system_builder.c
TEST/include/: test_activation_fnc.h  test_full_run.h  test_genetic_operations.h  test_main.h  test_matrixes.h  test_model_system.h  test_neural_network.h  test_pid_controller.h  test_population.h  test_signal_designer.h  test_sort.h
TOOLBOX/GENERAL/: general.c  general_math.c  matri_math.c  matrix_math.c  pid_controller.c  ploting_toolbox.c  signal_designer.c  sort.c  systems_builder.c
TOOLBOX/GENERAL/include/: general.h  general_math.h  matrix_math.h  pid_controller.h  ploting_toolbox.h  signal_designer.h  sort.h  systems_builder.h
TOOLBOX/GENERAL/include/output/: signal_designer
TOOLBOX/GENETIC/: fit_functions.c  genetic_operations.c  population.c
TOOLBOX/GENETIC/include/: fit_functions.h  genetic_operations.h  population.h
TOOLBOX/NEURAL/: activation_fnc.c  input_toolbox.c  model_system.c  neural_network.c
TOOLBOX/NEURAL/include/: activation_fnc.h  input_toolbox.h  model_system.h  neural_network.h
TOOLBOX/PYTHON/: ploting_code.py  ploting_code_NN.py
TOOLBOX/PYTHON/input/: data_pid_.csv  data_pid_run.csv
include/toolbox/data_structures/: matrix.h
include/toolbox/general/: general_math.h  matrix_math.h  pid_controller.h  ploting_toolbox.h  plotting_toolbox.h  signal_designer.h  sort.h  systems_builder.h
include/toolbox/genetic/: fit_functions.h  genetic_operations.h  population.h
include/toolbox/neural/: input_toolbox.h  model_system.h  neural_network.h
src/: main.c
src/toolbox/data_structures/: matrix.c
src/toolbox/general/: general_math.c  matrix_math.c  pid_controller.c  ploting_toolbox.c  plotting_toolbox.c  signal_designer.c  sort.c  systems_builder.c
src/toolbox/genetic/: fit_functions.c  genetic_operations.c  population.c
src/toolbox/neural/: activation_fnc.c  input_toolbox.c  model_system.c  neural_network.c
test/: test.c
test/include/general/: test_matrices.h  test_matrixes.h  test_pid_controller.h  test_signal_designer.h  test_sort.h  test_system_builder.h
test/include/genetic/: test_genetic_operations.h  test_population.h
test/include/neural/: test_model_system.h  test_neural_network.h
test/include/runs/: test_full_run.h
test/tests/data_structures/: CMakeLists.txt  test_matrices.c
test/tests/general/: CMakeLists.txt  test_matrices.c  test_matrixes.c  test_pid_controller.c  test_signal_designer.c  test_sort.c  test_system_builder.c
test/tests/genetic/: CMakeLists.txt  test_genetic_operations.c  test_population.c
test/tests/neural/: test_activation_fnc.c  test_model_system.c  test_neural_network.c
test/tests/runs/: test_full_run.c
